create async prof download folder if needed